examples/datalog/15_arithmetic/25_order_of_operations.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_order
Knowledge graph 'test_order' created.
Switched to knowledge graph: test_order
> .kg use test_order
Switched to knowledge graph: test_order
> +nums[(10,), (20,)].
Inserted 2 fact(s) into 'nums'.
> result(X, R) :- nums(X), R = X + 5 * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "result", args: [Variable("X"), Variable("R")] }. Variables ["R"] in head do not appear in positive body atoms.
